apps/arcadia/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: arcadia
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: default
  hostnames:
    - arcadia.good-robert.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: arcadia
          port: 80
